Bug 1088481 - stop progress timer in MediaDecoder::Shutdown if necessary. r=cpearce